manifests/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dito-api
  namespace: dito-app
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: dito-api
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
