manifests/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groove
spec:
  rules:
    - host: groove.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dito-api
                port:
                  name: http
